# nova-infra

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  AUTOMATION_STATUS.md  BACKLOG_COMPLETED.md  DEPLOYMENT_SUMMARY.md  Dockerfile.ci  IMPLEMENTATION_PLAN.md  LIFECYCLE.md  Makefile  PLAN.md  PROJECT.md  PROJECT_AUDIT.md  README.md  WIKI_MIGRATION.md  docker-compose.ci.yml  pyproject.toml  setup.sh  tools.json
.github/workflows/: build-deploy.yml  ci.yml  complete-setup.yml  ecr-push.yml  release.yml  terraform-deploy.yml  terraform-validate.yml  terraform.yml
apps/hello-world/: .env.example  .gitignore  Makefile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
apps/hello-world/backend/: pyproject.toml
apps/hello-world/frontend/: .prettierignore  webpack.config.js
apps/hello-world/frontend/public/: index.html
apps/hello-world/test-terraform/: main.tf
apps/hello-world/tests/: test_api.py
apps/tf-visualizer/: Dockerfile  Makefile  app.py  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
apps/tf-visualizer/backend/: api.py  parser.py
apps/tf-visualizer/frontend/: .eslintrc.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
apps/tf-visualizer/frontend/src/: App.tsx  styles.css
apps/tf-visualizer/tests/: test_api.py  test_parser.py
docs/: ci-container.md
helm/tf-visualizer/: Chart.yaml  values.yaml
helm/tf-visualizer/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
scripts/: generate-deps.py  install-terraform-tools.sh  setup.sh  validate.sh
terraform/: DELETING_TF_AWS.md  Makefile  README.md  backend-local.tf.example  backend.tf  init-backend.sh  main.tf  outputs.tf  tfplan  variables.tf  versions.tf
terraform/bootstrap/: README.md  main.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
