[project]
name = "tf-visualizer"
version = "0.1.0"
description = "Terraform infrastructure visualizer backend"
authors = [
    {name = "NovaFuse Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "../work/ruff"

[tool.mypy]
cache_dir = "../work/mypy"

[tool.pytest.ini_options]
cache_dir = "../work/pytest"

[tool.coverage.run]
data_file = "../work/coverage/.coverage"
